[gd_scene load_steps=7 format=3 uid="uid://54qet76l8iip"]

[ext_resource type="Shader" uid="uid://btjpurw470nhn" path="res://scenes/UI/main_menu_ui.gdshader" id="1_684at"]
[ext_resource type="Script" uid="uid://bxpwq7o2dejv7" path="res://scripts/UI/load_game_ui.gd" id="1_ly8bc"]
[ext_resource type="FontFile" uid="uid://hke21ckgccrf" path="res://textures/Fonts/superstar-memesbruh03/superstar_memesbruh03.ttf" id="2_ly8bc"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ly8bc"]
noise_type = 0
frequency = 0.3395

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_j7mx2"]
noise = SubResource("FastNoiseLite_ly8bc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cnoai"]
shader = ExtResource("1_684at")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_j7mx2")
shader_parameter/density = 57.5
shader_parameter/speed_x = 100.0
shader_parameter/speed_y = 1.49012e-06
shader_parameter/layers = 10.0

[node name="LoadGameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
script = ExtResource("1_ly8bc")

[node name="ShaderBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cnoai")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 270.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Load game / Continue"
horizontal_alignment = 1

[node name="Slot1HBox" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadSlotButton1" type="Button" parent="PanelContainer/VBoxContainer/Slot1HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Slot 1:"

[node name="DeleteButton1" type="Button" parent="PanelContainer/VBoxContainer/Slot1HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Del"

[node name="Slot2HBox" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadSlotButton2" type="Button" parent="PanelContainer/VBoxContainer/Slot2HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Slot 1:"

[node name="DeleteButton2" type="Button" parent="PanelContainer/VBoxContainer/Slot2HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Del"

[node name="Slot3HBox" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadSlotButton3" type="Button" parent="PanelContainer/VBoxContainer/Slot3HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Slot 1:"

[node name="DeleteButton3" type="Button" parent="PanelContainer/VBoxContainer/Slot3HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Del"

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Save or Error Message"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ly8bc")
text = "Back to Main Menu"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
title = "Confirm Deletion"
size = Vector2i(526, 132)
dialog_text = "Are you sure you want to delete this save? This cannot be undone."

[connection signal="confirmed" from="DeleteConfirmDialog" to="." method="_on_delete_confirmed"]
